# codetective

./: .codetective.yaml  .coveragerc  .windsurfrules  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  security_issues.py  setup.py
.windsurf/: rules.md  workflow.md
FOCUS_CONTEXT/: 01_System_and_Interaction.md  02_Domain_Overview.md  03_Standards_and_Conventions.md  04_Tasks_and_Workflow.md  05_Session.md  05_User_and_Session.md
FOCUS_CONTEXT/01_system/: assistant-personna.md
FOCUS_CONTEXT/02_domain/: project-overview.md
FOCUS_CONTEXT/02_domain/architecture/: data-models.md  system-architecture.md
FOCUS_CONTEXT/02_domain/codebase/: dependency-graph.md  project-tree.md
FOCUS_CONTEXT/02_domain/standards/: coding-standards.md
FOCUS_CONTEXT/03_tasks/: current-objectives.md
FOCUS_CONTEXT/03_tasks/acceptance-criteria/: multi-agent-workflow.md
FOCUS_CONTEXT/03_tasks/feature-specs/: cli-interface.md  gui-interface.md  mcp-interface.md  multi-agent-architecture.md
codetective/: __init__.py
codetective-core/: Dockerfile  README.md  pyproject.toml
codetective-core/src/codetective/: __init__.py  main.py
codetective-core/src/codetective/agents/: __init__.py  ai_review_agent.py  base.py  output_comment_agent.py  output_update_agent.py  semgrep_agent.py  trivy_agent.py
codetective-core/src/codetective/interfaces/: __init__.py  cli.py  gui.py
codetective-core/src/codetective/models/: __init__.py  agent_result.py  agent_results.py  configuration.py  interface_models.py  workflow_state.py
codetective-core/src/codetective/utils/: __init__.py  configuration_manager.py  file_processor.py  git_repository_manager.py  logger.py  result_aggregator.py
codetective-core/src/codetective/workflow/: __init__.py  graph_builder.py  orchestrator.py
codetective-launcher/: README.md  pyproject.toml
codetective-launcher/src/codetective_launcher/: docker_manager.py  main.py
codetective-launcher/src/codetective_launcher/utils/: docker_api_client.py
codetective/agents/: __init__.py  ai_base.py  base.py
codetective/agents/output/: comment_agent.py  edit_agent.py
codetective/agents/scan/: __init__.py  ai_review_agent.py  dynamic_ai_agent.py  dynamic_ai_review_agent.py  semgrep_agent.py  trivy_agent.py
codetective/cli/: commands.py
codetective/core/: __init__.py  config.py  orchestrator.py  search.py  utils.py
codetective/gui/: __init__.py  nicegui_app.py  streamlit_app.py
codetective/models/: __init__.py  schemas.py
codetective/security/: __init__.py  input_validator.py  output_filter.py  prompt_guard.py
codetective/utils/: __init__.py  file_utils.py  git_utils.py  process_utils.py  prompt_builder.py  string_utils.py  system_utils.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
tests/: README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  test_basic.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_ai_base.py  test_base_agent.py  test_config.py  test_file_utils.py  test_git_utils.py  test_input_validator.py  test_orchestrator.py  test_output_agents.py  test_output_filter.py  test_process_utils.py  test_prompt_builder.py  test_prompt_guard.py  test_schemas.py  test_semgrep_agent.py  test_string_utils.py  test_system_utils.py  test_trivy_agent.py
