[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codetective"
version = "0.1.0"
description = "Multi-agent code review tool with static analysis, security scanning, and AI-powered improvements"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Codetective Team", email = "team@codetective.dev"}
]
keywords = ["code-review", "static-analysis", "security", "multi-agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    # Workflow Orchestration
    "langgraph==0.6.3",

    # Interface Frameworks
    "streamlit==1.48.0",
    "click==8.1.8",
    "typer==0.16.0",

    # External Tool Integration
    "semgrep==1.131.0",

    # AI/LLM Providers
    "openai==1.99.1",
    "anthropic==0.61.0",
    "google-genai==1.28.0",
    "requests==2.32.4",

    # Data Processing
    "pydantic==2.11.7",
    "dataclasses-json==0.6.7",
    "pyyaml==6.0.2",
    "jsonschema==4.25.0",

    # Utilities
    "loguru==0.7.3",
    "typing-extensions==4.14.1",
    "pathlib2==2.3.7.post1",
    "plotly==6.2.0",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "mkdocs>=1.5.0",
]

local-llm = [
    "ollama>=0.1.0",
    "lmstudio-api>=0.1.0",
]

security = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

performance = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/codetective/codetective"
Documentation = "https://codetective.readthedocs.io"
Repository = "https://github.com/codetective/codetective"
Issues = "https://github.com/codetective/codetective/issues"

[project.scripts]
codetective = "codetective.interfaces.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
