[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetective-launcher"
version = "0.1.0"
description = "A launcher for the Codetective Docker-based code analysis tool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.8",
    "requests==2.32.4",
    "rich==13.5.3"
]

[project.scripts]
codetective-launcher = "codetective_launcher.main:cli"
